k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
      - name: logs
        persistentVolumeClaim:
          claimName: logs
      - name: config
        persistentVolumeClaim:
          claimName: config
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce
        ports:
        - containerPort: 22
        - containerPort: 80
        volumeMounts:
          - name: data
            mountPath: "/var/opt/gitlab"
          - name: logs
            mountPath: "/var/log/gitlab"
          - name: config
            mountPath: "/etc/gitlab"
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            add:
              - SYS_CHROOT
      nodeSelector:
            kubernetes.io/hostname: neon
